[Chirag] ADD: Implemented notifications and imporove file structure